fixing mobile spacing issues

--- a/letender/src/App.css
+++ b/letender/src/App.css
@@ -93,7 +93,7 @@ h1 {
   margin-left: 11%;
   margin-bottom: 4%;
   font-family: 'Righteous', cursive;
-  color: #68b6bb;
+  color: #65c6cc;
   font-size: 2.4em;
   text-transform: uppercase;
 }
